--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_bloc: ^8.1.6
+  flutter_svg: ^2.0.14
+  get_it: ^8.0.2
+  bloc: ^8.1.4
+  cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
+  dio: ^5.7.0
+  equatable: ^2.0.5
+
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
-
-  flutter_bloc: ^8.1.6
-  bloc: ^8.1.4
-  dio: ^5.7.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
@@ -50,9 +54,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/vectors/logo.svg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
